# HomeMadeDiffusion

./: .claudeignore  .gitignore  CLAUDE.md  README.md  config.yaml  data.py  diffusion_engine.py  eval_prompts.txt  inference.py  model_builder.py  pyproject.toml  run.sh  samplers.py  scheduling.py  train.py  trainer.py  utils.py
.claude/skills/check-shapes/: SKILL.md
.claude/skills/vram-check/: SKILL.md
configs/: train_cc12m.yaml  train_pickapic_v1.yaml
data/: __init__.py  cache.py  dataset.py  encoding.py  loader.py  migrate_captions.py  protocols.py  streaming.py  vae_cache.py
diffusion/: __init__.py  engine.py
diffusion/methods/: __init__.py  base.py  ddpm.py  flow_matching.py
diffusion/samplers/: __init__.py  base.py  ddim_sampler.py  ddpm_sampler.py  flow_matching_sampler.py
evaluation/: __init__.py  metrics.py
models/: __init__.py  condition_manager.py  conditioning.py  cross_attention.py  infer.py  layers.py  models.py  projectors.py
scripts/: check_eval.py  diversity_sample.py  eval_checkpoints.py  extract_pickapic_captions.py  migrate_captions.py  migrate_latent_shards.py  portfolio_eval.py  prepare_cc12m.py  probe_categories.py  rebuild_captions.py  score_cc12m.py  score_cc12m_clip.py  validate_shapes.py
tests/: conftest.py  test_checkpoint.py  test_ddpm.py  test_dit.py  test_eval_metrics.py  test_flow_matching.py  test_latent_diffusion.py  test_overfit.py  test_samplers.py  test_vae_cache.py
